--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Second description 
   <br><br>
-  <a href="www.linkedin.com/in/nishitakapoor">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/nishitakapoor/">View My LinkedIn Profile</a> 
   
   <a href="https://github.com/Nishita-Kapoor">View My GitHub Profile</a> 
   
