--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Nishita Kapoor # your name (or website title) here
-logo: "/images/Profile_Photo_tiny.jpg?raw=true" # your photo (or logo) here
+logo: "/images/profile_photo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
   <br><br>
