--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Nishita Kapoor # your name (or website title) here
-logo: "/images/my_picture_1.png?raw=true" # your photo (or logo) here
+logo: "/images/my_picture_1_1_30.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   ...
   <br><br>
