--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,16 @@
 title: Nishita Kapoor # your name (or website title) here
-logo: "/images/my_picture_1_1_30.png?raw=true" # your photo (or logo) here
+logo: "/images/my_picture_2.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  ...
+  .
+  .
+  .
+  .
+  .
+  
   <br><br>
-  ...
+  .
+  .
+  .
   <br><br>
   <a href="https://www.linkedin.com/in/nishitakapoor/">View My LinkedIn Profile</a>
   <br><br>
