--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   .
   
   <br><br>
-  .
-  .
-  .
+  I am interested in opportunities at the intersection of Data Science and Biology that result in technological advancements.
   <br><br>
   <a href="https://www.linkedin.com/in/nishitakapoor/">View My LinkedIn Profile</a>
   <br><br>
