--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Nishita Kapoor # your name (or website title) here
-logo: "/images/my_picture_tiny.png?raw=true" # your photo (or logo) here
+logo: "/images/my_picture_2.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   I developed my interest in data science right after the Covid pandemic, I was amazed by that what insights we can get from the data and we can actually
   predict where the virus is spreading, how it is mutating and its effect on economies. Fascinating! I feel so excited and started to learn everything I can
