--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,15 @@
 title: Nishita Kapoor # your name (or website title) here
 logo: "/images/my_picture_2.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  I developed my interest in data science right after the Covid pandemic, I was amazed by that what insights we can get from the data and we can actually
-  predict where the virus is spreading, how it is mutating and its effect on economies. Fascinating! I feel so excited and started to learn everything I can
-  because I have to, python, SQL, statistics, exploratory analysis, machine learning, neural networks...
+  I developed my interest in data science during the Covid pandemic. I was fascinated by the insights we can get from the data and applications of AI to biomedical
+  industry such as in diagnostics etc. I have a Master's in Biotechnology and extensive biomedical research experience. Being passionate about the healthcare industry,
+  I was excited about gaining these new skills and started on this new path towards data science. 
+  Since pursuing this goal of Data Science I have learned that I love problem solving. This is why I have fully switched into pursuing the Data Science industry,
+  and I aspire to be on the forefront developing algorithms in all aspects of Artificial Intelligence.
+  Although I am a long way away from that goal, I strive to learn as much as I can in all aspects of the Data Cycle. I obtained deep understanding of Data Science
+  and Machine Learning concepts and tools through various courses and personal projects.
   <br><br>
-  I am interested in opportunities at the intersection of Data Science and Biology that result in technological advancements.
+   I am now seeking opportunities where I can leverage AI and data science to solve problems in the biotechnology/healthcare industry and result in translational advancements.
   <br><br>
   <a href="https://www.linkedin.com/in/nishitakapoor/">View My LinkedIn Profile</a>
   <br><br>
