--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,9 @@ description: > # your text below (remove <br> elements if you don't need line br
   I developed my interest in data science during the Covid pandemic. I was fascinated by the insights we can get from the data and applications of AI to biomedical
   industry such as in diagnostics etc. I have a Master's in Biotechnology and extensive biomedical research experience. Being passionate about the healthcare industry,
   I was excited about gaining these new skills and started on this new path towards data science. 
-  Since pursuing this goal of Data Science I have learned that I love problem solving. This is why I have fully switched into pursuing the Data Science industry,
-  and I aspire to be on the forefront developing algorithms in all aspects of Artificial Intelligence.
-  Although I am a long way away from that goal, I strive to learn as much as I can in all aspects of the Data Cycle. I obtained deep understanding of Data Science
-  and Machine Learning concepts and tools through various courses and personal projects.
+  Since pursuing this goal of Data Science I have learned that I love problem solving. 
   <br><br>
-   I am now seeking opportunities where I can leverage AI and data science to solve problems in the biotechnology/healthcare industry and result in translational advancements.
+  I am now seeking opportunities where I can leverage AI and data science to solve problems in the biotechnology/healthcare industry and result in translational advancements.
   <br><br>
   <a href="https://www.linkedin.com/in/nishitakapoor/">View My LinkedIn Profile</a>
   <br><br>
