--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: Nishita Kapoor # your name (or website title) here
 logo: "/images/my_picture_2.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  I developed my interest in data science during the Covid pandemic. I was fascinated by the insights we can get from the data and applications of AI to biomedical
-  industry such as in diagnostics etc. I have a Master's in Biotechnology and extensive biomedical research experience. Being passionate about the healthcare industry,
-  I was excited about gaining these new skills and started on this new path towards data science. 
-  Since pursuing this goal of Data Science I have learned that I love problem solving. 
+  Armed with a biotechnology background, I worked extensively on diverse research projects around the world. 
+  During the pandemic, I realized the true potential of AI and data science in addressing some of the most important challenges in healthcare, such as 
+  medical diagnostics, prognosis, treatement etc.
+  Passionate to play my part in this revolution, I am excited to step into the field of AI for healthcare and help transform people's lives.
   <br><br>
-  I am now seeking opportunities where I can leverage AI and data science to solve problems in the biotechnology/healthcare industry and result in translational advancements.
+  I am actively seeking opportunities where I can leverage AI and data science to solve healthcare challenges and result in translational advancements.
   <br><br>
   <a href="https://www.linkedin.com/in/nishitakapoor/">View My LinkedIn Profile</a>
   <br><br>
