--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Nishita Kapoor # your name (or website title) here
 logo: "/images/my_picture_2.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Armed with a biotechnology background, I worked extensively on diverse research projects around the world. 
+  After completing my Masters in Biotechnology, I worked extensively on diverse research & industrial projects around the world.  
   During the pandemic, I realized the true potential of AI and data science in addressing some of the most important challenges in healthcare, such as 
   medical diagnostics, prognosis, treatement etc.
   Passionate to play my part in this revolution, I am excited to step into the field of AI for healthcare and help transform people's lives.
