--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   medical diagnostics, prognosis, treatement etc.
   Passionate to play my part in this revolution, I am excited to step into the field of AI for healthcare and help transform people's lives.
   <br><br>
-  I am actively seeking opportunities where I can leverage AI and data science to solve healthcare challenges and result in translational advancements.
+  I am actively seeking opportunities where I can leverage AI and data science towards solving real-world healthcare challenges.
   <br><br>
   <a href="https://www.linkedin.com/in/nishitakapoor/">View My LinkedIn Profile</a>
   <br><br>
