--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <a href="https://www.linkedin.com/in/nishitakapoor/">View My LinkedIn Profile</a>
   <br><br>
-  <a href="">View My Resume</a>
+  <a href="/pdf/NishitaKapoor_CV.pdf">View My Resume</a>
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
